--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,7 @@ services:
         networks:
             - backend
         volumes:
-            - 'html:${WEBSERVER_DOC_ROOT}'
-            - 'app:/app'
+            - 'html:${WEBSERVER_DOC_ROOT}'            
             - type: bind
               source: ./php-fpm/php/conf.d/security.ini
               target: '${PHP_INI_DIR_PREFIX}/php/conf.d/security.ini'
@@ -30,8 +29,9 @@ services:
         labels:            
             - 'docker-volume-backup.stop-during-backup=true'
         command: >
-            bash -c "docker-php-ext-install && docker-php-ext-enable; pecl install -o -f redis && rm -rf /tmp/pear && docker-php-ext-enable redis; curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer 
-            && composer create-project codeigniter4/appstarter --no-dev; grep -qe 'date.timezone = ${LOCAL_TIMEZONE}' ${PHP_INI_DIR_PREFIX}/php/conf.d/security.ini || echo 'date.timezone = ${LOCAL_TIMEZONE}' >> ${PHP_INI_DIR_PREFIX}/php/conf.d/security.ini; php-fpm"
+            bash -c "apt-get -y update && apt-get install -y zip unzip libicu-dev && docker-php-ext-install mysqli intl && pecl install -o -f redis && rm -rf /tmp/pear && docker-php-ext-enable redis mysqli intl; curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer && composer create-project codeigniter4/appstarter --no-dev; 
+            sed \"s/# app.baseURL = ''/app.baseURL = 'https:\/\/${DOMAIN_NAME}\/'/;s/# database.default.hostname = localhost/database.default.hostname = database/;s/# database.default.database = ci4/database.default.database = ${DB_NAME}/;s/# database.default.username = root/database.default.username = ${DB_USER}/;s/# database.default.password = root/database.default.password = ${DB_PASSWORD}/;s/# database.default.DBDriver = MySQLi/database.default.DBDriver = MySQLi/;s/# database.default.DBPrefix = /database.default.DBPrefix = ${DB_TABLE_PREFIX}/;s/# database.default.port = 3306/database.default.port = 3306/\" ${WEBSERVER_DOC_ROOT}/appstarter/env > ${WEBSERVER_DOC_ROOT}/appstarter/.env; 
+            chmod 777 -R ${WEBSERVER_DOC_ROOT}/appstarter/writable/; grep -qe 'date.timezone = ${LOCAL_TIMEZONE}' ${PHP_INI_DIR_PREFIX}/php/conf.d/security.ini || echo 'date.timezone = ${LOCAL_TIMEZONE}' >> ${PHP_INI_DIR_PREFIX}/php/conf.d/security.ini; php-fpm"
 
     webserver:
         depends_on:
@@ -218,13 +218,6 @@ volumes:
         driver_opts:
             type: none
             device: ${DIRECTORY_PATH}/codeigniter/html
-            o: bind
-    app:
-        name: codeIgniter-app
-        driver: local
-        driver_opts:
-            type: none
-            device: ${DIRECTORY_PATH}/codeigniter/app
             o: bind
     db:
         name: ${DATABASE_CONT_NAME}-data
