--- a/env.example
+++ b/env.example
@@ -13,6 +13,7 @@ PHP_INI_DIR_PREFIX=/usr/local/etc
 DB_USER=db_username
 DB_PASSWORD=db_password
 DB_NAME=db_name
+DB_TABLE_PREFIX=db_table_prefix
 
 MYSQL_CONF_PREFIX=/etc/mysql/conf.d
 MYSQL_ROOT_PASSWORD=mysql_root_password
