--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
         networks:
             - backend
         volumes:
-            - 'html:${WEBSERVER_DOC_ROOT}'            
+            - 'html:${WEBSERVER_DOC_ROOT}'
             - type: bind
               source: ./php-fpm/php/conf.d/security.ini
               target: '${PHP_INI_DIR_PREFIX}/php/conf.d/security.ini'
@@ -35,7 +35,7 @@ services:
         labels:            
             - 'docker-volume-backup.stop-during-backup=true'
         command: >
-            bash -c "apt-get -y update && apt-get install -y zip unzip libicu-dev && docker-php-ext-install mysqli intl && pecl install -o -f redis && rm -rf /tmp/pear && docker-php-ext-enable redis mysqli intl; curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer && if [ -f \"${WEBSERVER_DOC_ROOT}/appstarter/.env\" ]; then composer update --prefer-dist --working-dir=./appstarter --no-interaction --ignore-platform-req=ext-intl; else composer create-project codeigniter4/appstarter --no-dev --prefer-dist --no-interaction --ignore-platform-req=ext-intl; fi; 
+            bash -c "apt-get -y update && apt-get install -y zip unzip libicu-dev && docker-php-ext-install mysqli intl && pecl install -o -f redis && rm -rf /tmp/pear && docker-php-ext-enable redis mysqli intl; curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer && if [ -f \"${WEBSERVER_DOC_ROOT}/appstarter/.env\" ]; then composer update --working-dir=${WEBSERVER_DOC_ROOT}/appstarter; else composer create-project codeigniter4/appstarter --no-dev; fi; 
             sed \"s/# app.baseURL = ''/app.baseURL = 'https:\/\/${DOMAIN_NAME}\/'/;s/# app_baseURL = ''/app_baseURL = 'https:\/\/${DOMAIN_NAME}\/'/;s/# database.default.hostname = localhost/database.default.hostname = database/;s/# database.default.database = ci4/database.default.database = ${DB_NAME}/;s/# database.default.username = root/database.default.username = ${DB_USER}/;s/# database.default.password = root/database.default.password = ${DB_PASSWORD}/;s/# database.default.DBDriver = MySQLi/database.default.DBDriver = MySQLi/;s/# database.default.DBPrefix =/database.default.DBPrefix = ${DB_TABLE_PREFIX}/;s/# database.default.port = 3306/database.default.port = 3306/\" ${WEBSERVER_DOC_ROOT}/appstarter/env > ${WEBSERVER_DOC_ROOT}/appstarter/.env; 
             chmod 777 -R ${WEBSERVER_DOC_ROOT}/appstarter/writable/; grep -qe 'date.timezone = ${LOCAL_TIMEZONE}' ${PHP_INI_DIR_PREFIX}/php/conf.d/security.ini || echo 'date.timezone = ${LOCAL_TIMEZONE}' >> ${PHP_INI_DIR_PREFIX}/php/conf.d/security.ini; php-fpm"
 
@@ -50,13 +50,13 @@ services:
         volumes:
             - 'html:${WEBSERVER_DOC_ROOT}'
             - type: bind
-              source: ./nginx/nginx.conf
+              source: ./webserver/nginx.conf
               target: '${NGINX_PREFIX}/nginx.conf'
             - type: bind
-              source: ./nginx/templates/nginx.conf.template
+              source: ./webserver/templates/nginx.conf.template
               target: '${NGINX_PREFIX}/templates/default.conf.template'
             - type: bind
-              source: ./nginx/ssl-option/options-ssl-nginx.conf
+              source: ./webserver/ssl-option/options-ssl-nginx.conf
               target: '${LETSENCRYPT_CONF_PREFIX}/options-ssl-nginx.conf'
             - type: bind
               source: ./ssl-conf.sh
