--- a/webserver/templates/nginx.conf.template
+++ b/webserver/templates/nginx.conf.template
@@ -50,10 +50,15 @@ server {
 		log_not_found off;
 	}
 	#
+	location ~ /.well-known {
+		allow all;
+	}
+	#
 	location = /favicon.ico {
 		log_not_found off;
 		access_log off;
 	}
+	#
 	location = /robots.txt {
 		allow all;
 		log_not_found off;
